<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="choose_dessert">Choose Dessert</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwiches_have_chocolate_and_vanilla_filling">Ice cream sandwiches have chocolate and vanilla filling</string>
    <string name="froyo_is_a_premium_self_serve_yogurt">Froyo is a premium self-serve yogurt</string>

    <string name="donut_order">You have ordered a donut</string>
    <string name="ice_cream_sandwich_order">You have ordered an ice cream sandwich</string>
    <string name="froyo_order">You have ordered a cup of froyo </string>
    <string name="same_day">Same Day Messenger Service</string>
    <string name="next_day">Next Day Ground Delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="choose_delivery_method">Choose Delivery Method:</string>
    <string name="about_us">About Us</string>
    <string name="call_us">Call Us</string>
    <string name="status">Status</string>
    <string name="order">Order</string>
    <string name="locate_us">Locate Us</string>
</resources>