<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/droid_desserts"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/choose_dessert"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/donut"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/donuts_are_glazed_and_sprinkled_with_candy"
        android:src="@drawable/donut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_choose_dessert"
        android:onClick="showDonut"/>

    <TextView
        android:id="@+id/text_donut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/donuts_are_glazed_and_sprinkled_with_candy"
        android:textColor="@color/purple_700"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/donut"
        app:layout_constraintLeft_toRightOf="@id/donut"
        app:layout_constraintTop_toTopOf="@id/donut" />

    <ImageView
        android:id="@+id/ice_cream_sandwich"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/ice_cream_sandwiches_have_chocolate_and_vanilla_filling"
        android:src="@drawable/ice_cream_sandwich"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donut"
        android:onClick="showIceCreamSandwich"/>

    <TextView
        android:id="@+id/text_ice_cream_sandwich"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream_sandwiches_have_chocolate_and_vanilla_filling"
        android:textColor="@color/purple_700"
        android:paddingLeft="5dp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/ice_cream_sandwich"
        app:layout_constraintLeft_toRightOf="@id/ice_cream_sandwich"
        app:layout_constraintBottom_toBottomOf="@id/ice_cream_sandwich"/>

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/froyo_is_a_premium_self_serve_yogurt"
        android:src="@drawable/froyo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ice_cream_sandwich"
        android:onClick="showFroyo"/>

    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/froyo_is_a_premium_self_serve_yogurt"
        android:textColor="@color/purple_700"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/froyo"
        app:layout_constraintLeft_toRightOf="@id/froyo"
        app:layout_constraintBottom_toBottomOf="@id/froyo"/>

</androidx.constraintlayout.widget.ConstraintLayout>